objects/tffa__DepositBoxConfigurationItem__c.object
<CustomObject>
    <description>A safe deposit box is a secured container—usually a metal box—that stays in the safe or vault of a federally insured bank or credit union. Safe deposit boxes are used to keep valuables, important documents for the individual
Captures the safe deposit box configurations associated with the product.</description>
    <fields>
        <fullName>CZSpecialRentalFeeAmount__c</fullName>
        <description>Special Program Rental Fee Amount</description>
        <label>Special Program Rental Fee Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__Active__c</fullName>
        <description>Reports whether the configuration is active for consumption. Derived from disabled state and deposit box configuration active state.</description>
        <formula>tffa__Disabled__c = False &amp;&amp; tffa__Configuration__r.tffa__Active__c = True</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Code__c</fullName>
        <description>Unique code of the safe deposit box as identified by the core banking system</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Configuration__c</fullName>
        <description>Reference to parent configuration.</description>
        <label>Configuration</label>
        <referenceTo>tffa__DepositBoxConfiguration__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>Description of the Safe Deposit Box</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the configuration is disabled.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the box is to be used for internal purposes</description>
        <label>Is Internal (Bank Box)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__KeyDepositAmount__c</fullName>
        <description>One time key deposit amount for the safe deposit box</description>
        <label>Key deposit amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__MaxNumberOfKeys__c</fullName>
        <description>Max number of keys allowed with the safe deposit box</description>
        <label>Max number of keys</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__RenewalDuration__c</fullName>
        <description>Renewal Duration of the box in months</description>
        <label>Renewal Duration (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__RentalFeeAmount__c</fullName>
        <description>Captures the annual rental amount applicable for the box</description>
        <label>Rental fee amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__Size__c</fullName>
        <description>Captures the size specification of the box</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Relative order of the item.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Deposit Box Configuration Item</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Deposit Box Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deposit Box Configuration Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>